Correct small text alignment error

--- a/assets/css/custom/home-page.css
+++ b/assets/css/custom/home-page.css
@@ -106,15 +106,16 @@ h2 {
 }
 
 .small {
+    width: 100%;
     margin-top: 5rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 }
 small {
     display: block;
     width: 100%;
     color: #fff;
+    text-align: center;
 }
 
 /* Large phone image */
